--- a/css/main.css
+++ b/css/main.css
@@ -33,10 +33,11 @@ body {
 h1 { 
     margin: 0;
     font-size: 3.5rem;
+    line-height: 14px;
 }
 
 h2 { 
-    font-size: 1rem; 
+    font-size: 1.5; 
     font-weight: bold;
 }
 
@@ -62,8 +63,11 @@ img {
         margin-right: 20%;
     }
     img { 
-        width: 70%;
-        
+        width: 70%;  
+    }
+      html {
+        font-size: 120%;
+        line-height: 1.5;
     }
         
 }
