--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ body {
     margin-right: 5%;
     background-color: white; 
     min-height: 100vh; 
-    padding-left: 2em;
     padding-top: 2em;
 }
 
@@ -34,21 +33,95 @@ h1 {
     margin: 0;
     font-size: 3.5rem;
     line-height: 14px;
+    padding-left: 2rem;
 }
 
 h2 { 
     font-size: 1.5; 
     font-weight: bold;
+    padding-left: 2rem;
 }
 
-main {
-    
+p {
+    padding-left: 2rem;
 }
 
 
 img {
     width:100%;
 }
+
+
+.soc {
+    overflow:hidden;
+    list-style:none;
+}
+
+.soc li {
+    display:inline-block;
+    *display:inline;
+    zoom:1;
+}
+
+.soc li a {
+    font-family:si!important;
+    font-style:normal;
+    font-weight:400;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -ms-box-sizing:border-box;
+    -o-box-sizing:border-box;
+    box-sizing:border-box;
+    overflow:hidden;
+    text-decoration:none;
+    text-align:center;
+    display:block;
+    position: relative;
+    z-index: 1;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 44px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    margin-right: 10px;
+    color: #ffffff;
+    background-color: none;
+}
+
+.soc-icon-last{
+    margin:0 !important;
+}
+
+.soc-twitter {
+    background-color: #4da7de;
+}
+.soc-twitter:before {
+    content:'a';
+}
+.soc-facebook {
+    background-color: #3e5b98;
+}
+.soc-facebook:before {
+    content:'b';
+}
+.soc-google {
+    background-color: #d93e2d;
+}
+.soc-google:before {
+    content:'c';
+}
+
+.soc-rss {
+    background-color: #f26109;
+}
+.soc-rss:before {
+    content:',';
+}
+
 
 
 /* media querries */  
@@ -65,9 +138,14 @@ img {
     img { 
         width: 70%;  
     }
-      html {
+    html {
         font-size: 120%;
         line-height: 1.5;
+    }
+    .textandicons { 
+        align-content: right;
+        padding-left: 10em;
+        padding-right: 1em;
     }
         
 }
@@ -77,5 +155,9 @@ img {
     body {
         margin-right: 40%;
     }
-
+    .textandicons {
+        align-content: right;
+        padding-left: 14em;
+        padding-right: 1em;
+        
 }
