--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,18 @@ html {
     font-family: 'Signika', sans-serif;
     background-color: grey; 
     background-image: url(../images/picture.jpg); /* thats going to fine the image and put it into the html element */
-    background-size: ;
+    background-size: cover;
     background-position: right top; 
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 body {
     margin: 0; 
     margin-right: 5%;
-    background-color: white; 
+    background-color: White; 
     min-height: 100vh; 
     padding-top: 2em;
 }
