--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ html {
 body {
     margin: 0; 
     margin-right: 5%;
-    background-color: White; 
+    background-color: blue; 
     min-height: 100vh; 
     padding-top: 2em;
 }
